test/pass/optargs/optarg_with_class.lly
class Point(x: *Integer=0, y: *Integer=0)
{
    var @x = x
    var @y = y
}

Point::new()
Point::new(1)
Point::new(1, 1)
