test/fail/classes/class_prop_initialize_self.lly
#[
SyntaxError: Invalid use of uninitialized property '@x'.
    from class_prop_initialize_self.lly:7
]#

class Point {
    var @x: Integer = @x
}
